--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </div>
             </div>
           </div>
-          <span class="heart"><i class="bi bi-heart-fill"></i></span>
+          <!-- <span class="heart"><i class="bi bi-heart-fill"></i></span> -->
           <div class="col-lg-6">
             <div class="row">
               <div class="col-4">
