Add Heart in Photo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Satria & Nurul</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam :</p>
         <div id="count" class="simply-countdown"></div>
-        <a href="#undangan" class="btn btn-lg mt-4">Lihat Undangan</a>
+        <a href="#home" class="btn btn-lg mt-4">Lihat Undangan</a>
       </main>
     </section>
 
@@ -52,7 +52,7 @@
       </div>
     </nav>
 
-    <section id="home" class="home bg">
+    <section id="home" class="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
@@ -78,7 +78,7 @@
               </div>
             </div>
           </div>
-          <!-- <span class="heart"><i class="bi bi-heart-fill"></i></span> -->
+          <span class="heart"><i class="bi bi-heart-fill"></i></span>
           <div class="col-lg-6">
             <div class="row">
               <div class="col-4">
