Fix name & Add Feature Gallery & Story

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-8 text-end">
-                <h3>Satria Irawan</h3>
+                <h3>Deuwi Satriya Irawan</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut ex cumque et dicta. Est?</p>
                 <p>
                   Putra dari Bpk. Lorem <br />
@@ -150,8 +150,106 @@
       </div>
     </section>
 
+    <section id="story" class="story">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Bagaimana cinta kami bersemi?</span>
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est itaque cumque nobis, saepe iure dicta.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <ul class="timeline">
+              <li>
+                <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300)"></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Pertama bertemu</h3>
+                    <span>1 September 2020</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis reiciendis tempora animi totam illum ratione?</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image" style="background-image: url(https://picsum.photos/300/301)"></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Mulai Pacaran</h3>
+                    <span>1 Oktober 2020</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis reiciendis tempora animi totam illum ratione?</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="gallery" class="gallery">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Memory Kisah Kami</span>
+            <h2>Gallery Foto</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, doloribus.</p>
+          </div>
+        </div>
+        <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-col-1 justify-content-center">
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/100/1200/765" data-toggle="lightbox" data-caption="Image 1" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/100/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/101/1200/765" data-toggle="lightbox" data-caption="Image 2" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/101/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/102/1200/765" data-toggle="lightbox" data-caption="Image 3" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/102/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/103/1200/765" data-toggle="lightbox" data-caption="Image 4" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/103/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/104/1200/765" data-toggle="lightbox" data-caption="Image 5" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/104/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/200/1200/765" data-toggle="lightbox" data-caption="Image 6" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/200/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/106/1200/765" data-toggle="lightbox" data-caption="Image 7" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/106/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/107/1200/765" data-toggle="lightbox" data-caption="Image 8" data-gallery="my-gallery">
+              <img src="https://picsum.photos/id/107/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <!-- Lightbox -->
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
     <!-- Countdown -->
     <script src="./js/simplyCountdown.min.js"></script>
     <!-- Styling -->
