--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Sanur</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+    <link href="./style/bootstrap/css/bootstrap-grid.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="./style/bootstrap/css/bootstrap-icon-1.10.5.css" />
     <!-- Goole Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:wght@100;300;400;600;700&display=swap" rel="stylesheet" />
+    <link href="./style/sacramento_work_sans.css" rel="stylesheet" />
     <!-- Countdown -->
-    <link rel="stylesheet" href="./css/simplyCountdown.theme.default.css" />
+    <link rel="stylesheet" href="./style/simplyCountdown.theme.default.css" />
     <!-- Styling -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <section id="hero" class="hero w-100 h-100 p-3 margin-auto text-center d-flex justify-content-center align-items-center text-white">
@@ -248,10 +251,12 @@
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="./style/bootstrap/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- Lightbox -->
     <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+    <script src="./script/bs5-lightbox-1.8.3.bundle.js"></script>
     <!-- Countdown -->
-    <script src="./js/simplyCountdown.min.js"></script>
+    <script src="./script/simplyCountdown.min.js"></script>
     <!-- Styling -->
     <script>
       simplyCountdown(".simply-countdown", {
