--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Satria & Nurul</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam :</p>
         <div id="count" class="simply-countdown"></div>
-        <a href="#home" class="btn btn-lg mt-4">Lihat Undangan</a>
+        <a href="#home" class="btn btn-lg mt-4" onclick="return enableScroll()">Lihat Undangan</a>
       </main>
     </section>
 
@@ -36,20 +36,20 @@
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Sanur</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link" href="#home">Home</a>
-              <a class="nav-link" href="#info">Info</a>
-              <a class="nav-link" href="#story">Story</a>
-              <a class="nav-link" href="#gallery">Gallery</a>
-              <a class="nav-link" href="#rsvp">RSV</a>
-              <a class="nav-link" href="#gifts">Gifts</a>
-            </div>
+      </div>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Sanur</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="#info">Info</a>
+            <a class="nav-link" href="#story">Story</a>
+            <a class="nav-link" href="#gallery">Gallery</a>
+            <a class="nav-link" href="#rsvp">RSPV</a>
+            <a class="nav-link" href="#gifts">Gifts</a>
           </div>
         </div>
       </div>
@@ -64,38 +64,38 @@
             <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu/Saudara/i, untuk hadir pada acara pernikahan kami</p>
           </div>
         </div>
-        <div class="row couple">
-          <div class="col-lg-6">
-            <div class="row">
-              <div class="col-8 text-end">
-                <h3>Deuwi Satriya Irawan</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut ex cumque et dicta. Est?</p>
-                <p>
-                  Putra dari Bpk. Lorem <br />
-                  dan <br />
-                  Ibu. Ipsum
-                </p>
-              </div>
-              <div class="col-4">
-                <img src="./img/satria.jpg" alt="Satria Irawan" class="img-responsive rounded-circle" />
-              </div>
+      </div>
+      <div class="row couple">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-8 text-end">
+              <h3>Deuwi Satriya Irawan</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut ex cumque et dicta. Est?</p>
+              <p>
+                Putra dari Bpk. Lorem <br />
+                dan <br />
+                Ibu. Ipsum
+              </p>
+            </div>
+            <div class="col-4">
+              <img src="./img/satria.jpg" alt="Satria Irawan" class="img-responsive rounded-circle" />
             </div>
           </div>
-          <span class="heart"><i class="bi bi-heart-fill"></i></span>
-          <div class="col-lg-6">
-            <div class="row">
-              <div class="col-4">
-                <img src="./img/nurul.jpg" alt="Nurul" class="img-responsive rounded-circle" />
-              </div>
-              <div class="col-8 text-start">
-                <h3>Nurul Hikmah Putri</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut ex cumque et dicta. Est?</p>
-                <p>
-                  Putri dari Bpk. Dolor <br />
-                  dan <br />
-                  Ibu. Amet
-                </p>
-              </div>
+        </div>
+        <span class="heart"><i class="bi bi-heart-fill"></i></span>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-4">
+              <img src="./img/nurul.jpg" alt="Nurul" class="img-responsive rounded-circle" />
+            </div>
+            <div class="col-8 text-start">
+              <h3>Nurul Hikmah Putri</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut ex cumque et dicta. Est?</p>
+              <p>
+                Putri dari Bpk. Dolor <br />
+                dan <br />
+                Ibu. Amet
+              </p>
             </div>
           </div>
         </div>
@@ -112,42 +112,42 @@
             <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang di langsungkan pernikahan, boleh jadi anda salah jadwal atau salah tempat.</p>
           </div>
         </div>
-        <div class="row justify-content-center mt-4">
-          <div class="col-md-5 col-10">
-            <div class="card text-center text-bg-light mb-5">
-              <div class="card-header">Akad Nikah</div>
-              <div class="card-body">
-                <div class="row justify-content-center">
-                  <div class="col-md-6">
-                    <i class="bi bi-clock d-block"></i>
-                    <span>08.00 - 10.00</span>
-                  </div>
-                  <div class="col-md-6">
-                    <i class="bi bi-calendar-event d-block"></i>
-                    <span>Minggu, 3 Agustus 2025</span>
-                  </div>
+      </div>
+      <div class="row justify-content-center mt-4">
+        <div class="col-md-5 col-10">
+          <div class="card text-center text-bg-light mb-5">
+            <div class="card-header">Akad Nikah</div>
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col-md-6">
+                  <i class="bi bi-clock d-block"></i>
+                  <span>08.00 - 10.00</span>
+                </div>
+                <div class="col-md-6">
+                  <i class="bi bi-calendar-event d-block"></i>
+                  <span>Minggu, 3 Agustus 2025</span>
                 </div>
               </div>
-              <div class="card-footer">Saat acara diharapkan untuk kondusif menjaga kekhidmatan dan kekhusuyuan seluruh proses</div>
             </div>
+            <div class="card-footer">Saat acara diharapkan untuk kondusif menjaga kekhidmatan dan kekhusuyuan seluruh proses</div>
           </div>
-          <div class="col-md-5 col-10">
-            <div class="card text-center text-bg-light">
-              <div class="card-header">Resepsi</div>
-              <div class="card-body">
-                <div class="row justify-content-center">
-                  <div class="col-md-6">
-                    <i class="bi bi-clock d-block"></i>
-                    <span>11.00 - Selesai</span>
-                  </div>
-                  <div class="col-md-6">
-                    <i class="bi bi-calendar-event d-block"></i>
-                    <span>Minggu, 3 Agustus 2025</span>
-                  </div>
+        </div>
+        <div class="col-md-5 col-10">
+          <div class="card text-center text-bg-light">
+            <div class="card-header">Resepsi</div>
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col-md-6">
+                  <i class="bi bi-clock d-block"></i>
+                  <span>11.00 - Selesai</span>
+                </div>
+                <div class="col-md-6">
+                  <i class="bi bi-calendar-event d-block"></i>
+                  <span>Minggu, 3 Agustus 2025</span>
                 </div>
               </div>
-              <div class="card-footer">Saat acara diharapkan untuk kondusif menjaga kekhidmatan dan kekhusuyuan seluruh proses</div>
             </div>
+            <div class="card-footer">Saat acara diharapkan untuk kondusif menjaga kekhidmatan dan kekhusuyuan seluruh proses</div>
           </div>
         </div>
       </div>
@@ -204,50 +204,134 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, doloribus.</p>
           </div>
         </div>
-        <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-col-1 justify-content-center">
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/100/1200/765" data-toggle="lightbox" data-caption="Image 1" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/100/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
+      </div>
+      <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-col-1 justify-content-center">
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/100/1200/765" data-toggle="lightbox" data-caption="Image 1" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/100/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/101/1200/765" data-toggle="lightbox" data-caption="Image 2" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/101/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/102/1200/765" data-toggle="lightbox" data-caption="Image 3" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/102/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/103/1200/765" data-toggle="lightbox" data-caption="Image 4" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/103/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/104/1200/765" data-toggle="lightbox" data-caption="Image 5" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/104/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/200/1200/765" data-toggle="lightbox" data-caption="Image 6" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/200/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/106/1200/765" data-toggle="lightbox" data-caption="Image 7" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/106/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="https://picsum.photos/id/107/1200/765" data-toggle="lightbox" data-caption="Image 8" data-gallery="my-gallery">
+            <img src="https://picsum.photos/id/107/300/400" alt="Satria" class="img-fluid w-100 rounded" />
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section id="rspv" class="rspv">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>Konfirmasi Kehadiran</h2>
+            <p>Isi Form dibawah ini untuk melakukan konfirmasi kehadiran!</p>
           </div>
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/101/1200/765" data-toggle="lightbox" data-caption="Image 2" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/101/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
+        </div>
+      </div>
+
+      <form id="my-form" class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST" action="https://script.google.com/macros/s/AKfycbxIAP9cDbiq0UJX-LhhzV0GLBuyT15TTD4zEMDMWCuNoYGVIpT3bCi4HY3d3xdhTv8twA/exec">
+        <div class="col-12 col-sm-6 col-md-5 col-lg-3">
+          <div class="mb-3">
+            <label for="nama" class="form-label">Nama</label>
+            <input type="text" class="form-control" name="nama" id="nama" placeholder="ex: Budi" />
           </div>
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/102/1200/765" data-toggle="lightbox" data-caption="Image 3" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/102/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-5 col-lg-3">
+          <div class="mb-3">
+            <label for="jumlah" class="form-label">Jumlah Kehadiran</label>
+            <input type="number" class="form-control" name="jumlah" id="jumlah" min="1" max="5" length="1" value="1" />
           </div>
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/103/1200/765" data-toggle="lightbox" data-caption="Image 4" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/103/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-5 col-lg-3">
+          <div class="mb-3">
+            <label for="status" class="form-label">Konfirmasi</label>
+            <select name="status" id="status" class="form-control form-select">
+              <option selected>Pilih salah satu</option>
+              <option value="Tidak Hadir">Tidak Hadir</option>
+              <option value="Hadir">Hadir</option>
+            </select>
           </div>
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/104/1200/765" data-toggle="lightbox" data-caption="Image 5" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/104/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-5 col-lg-3" style="margin-bottom: 4px">
+          <button class="btn btn-primary mt-4">Kirim</button>
+        </div>
+      </form>
+    </section>
+
+    <section id="gifts" class="gifts">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Ungkapan Tanda Kasih</span>
+            <h2>Kirim Hadiah</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id explicabo, porro doloremque quaerat corrupti officiis?</p>
           </div>
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/200/1200/765" data-toggle="lightbox" data-caption="Image 6" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/200/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
-          </div>
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/106/1200/765" data-toggle="lightbox" data-caption="Image 7" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/106/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
-          </div>
-          <div class="col mt-3">
-            <a href="https://picsum.photos/id/107/1200/765" data-toggle="lightbox" data-caption="Image 8" data-gallery="my-gallery">
-              <img src="https://picsum.photos/id/107/300/400" alt="Satria" class="img-fluid w-100 rounded" />
-            </a>
+        </div>
+        <div class="row justify-content-center text-center">
+          <div class="col-md-6">
+            <ul class="list-group">
+              <li class="list-group-item mt-2">
+                <div class="font-weight-bold">Bank BRI</div>
+                123456789 a/n Deuwi Satriya Irawan
+              </li>
+              <li class="list-group-item mt-2">
+                <div class="font-weight-bold">Bank BTN</div>
+                123456789 a/n Deuwi Satriya Irawan
+              </li>
+              <li class="list-group-item mt-2">
+                <div class="font-weight-bold">Dana</div>
+                082253332802 a/n Deuwi Satriya Irawan
+              </li>
+              <li class="list-group-item mt-2">
+                <div class="font-weight-bold">LinkAja</div>
+                082253332802 a/n Deuwi Satriya Irawan
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
+
+    <footer class="mt-4">
+      <div class="container text-white">
+        <div class="row">
+          <div class="col text-center">
+            <small class="d-block">&copy; 2023 Sanur Wedding, All Rights Reserved</small>
+            <small class="d-block">Design By: <a href="https://www.linkedin.com/in/satriai418/" class="text-decoration-none text-white">Deuwi Satriya Irawan</a></small>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
@@ -258,7 +342,7 @@
     <!-- Countdown -->
     <script src="./script/simplyCountdown.min.js"></script>
     <!-- Styling -->
-    <script>
+    <script type="text/javascript">
       simplyCountdown(".simply-countdown", {
         year: 2025, // required
         month: 8, // required
@@ -279,8 +363,7 @@
         },
         refresh: 1000, //default refresh every 1s
       });
-    </script>
-    <script>
+
       const offCanvas = document.querySelector(".offcanvas");
       const stickyTop = document.querySelector(".sticky-top");
 
@@ -290,6 +373,44 @@
 
       offCanvas.addEventListener("hidden.bs.offcanvas", function (e) {
         stickyTop.style.overflow = "hidden";
+      });
+
+      const elementRoot = document.querySelector(":root");
+
+      function disableScroll() {
+        let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+        let scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
+
+        window.onscroll = function () {
+          window.scrollTo(scrollTop, scrollLeft);
+        };
+
+        elementRoot.style.scrollBehavior = "auto";
+      }
+
+      function enableScroll() {
+        window.onscroll = function () {};
+        elementRoot.style.scrollBehavior = "smooth";
+        localStorage.setItem("opened", "true");
+      }
+
+      if (!localStorage.getItem("opened")) {
+        disableScroll();
+      }
+
+      window.addEventListener("load", function () {
+        const form = document.getElementById("my-form");
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+          const data = new FormData(form);
+          const action = e.target.action;
+          fetch(action, {
+            method: "POST",
+            body: data,
+          }).then(() => {
+            alert("Konfirmasi Kehadiran Berhasil Terkirim!");
+          });
+        });
       });
     </script>
   </body>
