--- a/index.html
+++ b/index.html
@@ -259,33 +259,35 @@
         </div>
       </div>
 
-      <form id="my-form" class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST" action="https://script.google.com/macros/s/AKfycbxIAP9cDbiq0UJX-LhhzV0GLBuyT15TTD4zEMDMWCuNoYGVIpT3bCi4HY3d3xdhTv8twA/exec">
-        <div class="col-12 col-sm-6 col-md-5 col-lg-3">
-          <div class="mb-3">
-            <label for="nama" class="form-label">Nama</label>
-            <input type="text" class="form-control" name="nama" id="nama" placeholder="ex: Budi" />
+      <div class="d-flex">
+        <form id="my-form" class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST" action="https://script.google.com/macros/s/AKfycbxIAP9cDbiq0UJX-LhhzV0GLBuyT15TTD4zEMDMWCuNoYGVIpT3bCi4HY3d3xdhTv8twA/exec">
+          <div class="col-12 col-sm-6 col-md-5 col-lg-3">
+            <div class="mb-3">
+              <label for="nama" class="form-label">Nama</label>
+              <input type="text" class="form-control" name="nama" id="nama" placeholder="ex: Budi" />
+            </div>
           </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-5 col-lg-3">
-          <div class="mb-3">
-            <label for="jumlah" class="form-label">Jumlah Kehadiran</label>
-            <input type="number" class="form-control" name="jumlah" id="jumlah" min="1" max="5" length="1" value="1" />
+          <div class="col-12 col-sm-6 col-md-5 col-lg-3">
+            <div class="mb-3">
+              <label for="jumlah" class="form-label">Jumlah Kehadiran</label>
+              <input type="number" class="form-control" name="jumlah" id="jumlah" min="1" max="5" length="1" value="1" />
+            </div>
           </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-5 col-lg-3">
-          <div class="mb-3">
-            <label for="status" class="form-label">Konfirmasi</label>
-            <select name="status" id="status" class="form-control form-select">
-              <option selected>Pilih salah satu</option>
-              <option value="Tidak Hadir">Tidak Hadir</option>
-              <option value="Hadir">Hadir</option>
-            </select>
+          <div class="col-12 col-sm-6 col-md-5 col-lg-3">
+            <div class="mb-3">
+              <label for="status" class="form-label">Konfirmasi</label>
+              <select name="status" id="status" class="form-control form-select">
+                <option selected>Pilih salah satu</option>
+                <option value="Tidak Hadir">Tidak Hadir</option>
+                <option value="Hadir">Hadir</option>
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-5 col-lg-3" style="margin-bottom: 4px">
-          <button class="btn btn-primary mt-4">Kirim</button>
-        </div>
-      </form>
+          <div class="col-12 col-sm-6 col-md-5 col-lg-3" style="margin-bottom: 4px">
+            <button class="btn btn-primary mt-4">Kirim</button>
+          </div>
+        </form>
+      </div>
     </section>
 
     <section id="gifts" class="gifts">
