--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </div>
       </div>
 
-      <div class="d-flex">
+      <div class="d-flex justify-content-center col-12">
         <form id="my-form" class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST" action="https://script.google.com/macros/s/AKfycbxIAP9cDbiq0UJX-LhhzV0GLBuyT15TTD4zEMDMWCuNoYGVIpT3bCi4HY3d3xdhTv8twA/exec">
           <div class="col-12 col-sm-6 col-md-5 col-lg-3">
             <div class="mb-3">
