--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="#info">Info</a>
             <a class="nav-link" href="#story">Story</a>
             <a class="nav-link" href="#gallery">Gallery</a>
-            <a class="nav-link" href="#rsvp">RSPV</a>
+            <a class="nav-link" href="#rspv">RSPV</a>
             <a class="nav-link" href="#gifts">Gifts</a>
           </div>
         </div>
