--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <body>
     <section id="hero" class="hero w-100 h-100 p-3 margin-auto text-center d-flex justify-content-center align-items-center text-white">
       <main>
-        <h4>Kepada Yth. Bpk/Ibu/Saudara/i,</h4>
-        <h1>Satria & Nurul</h1>
-        <p>Akan melangsungkan resepsi pernikahan dalam :</p>
+        <h4>Dear Mr. / Mrs / Brother / Sister ,</h4>
+        <h1>Mérida & Nurul</h1>
+        <p>Will hold a wedding reception in: </p>
         <div id="count" class="simply-countdown"></div>
-        <a href="#home" class="btn btn-lg mt-4" onclick="return enableScroll()">Lihat Undangan</a>
+        <a href="#home" class="btn btn-lg mt-4" onclick="return enableScroll()">View Invitation</a>
       </main>
     </section>
 
@@ -59,9 +59,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-            <h2>Acara Pernikahan</h2>
-            <h3>Di selenggarakan pada Minggu, 3 Agustus 2025</h3>
-            <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu/Saudara/i, untuk hadir pada acara pernikahan kami</p>
+            <h2>Wedding Events</h2>
+            <h3>Held on Saturday, February 22, 2025</h3>
+            <p>With all our sincerity, we want to invite you to attend our wedding</p>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <h2>Informasi Acara</h2>
+            <h2>Event Information</h2>
             <p class="alamat">Alamat: Jl. Untung Suropati No.35, Karang Asam Ulu, Kec. Sungai Kunjang, Kota Samarinda, Kalimantan Timur</p>
             <a href="https://goo.gl/maps/XgYz6VzpXbwVbT9LA" target="_blank" class="btn btn-light btn-sm my-4">Klik untuk membuka peta</a>
             <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang di langsungkan pernikahan, boleh jadi anda salah jadwal atau salah tempat.</p>
@@ -347,17 +347,17 @@
     <script type="text/javascript">
       simplyCountdown(".simply-countdown", {
         year: 2025, // required
-        month: 8, // required
+        month: 2, // required
         day: 3, // required
-        hours: 8, // Default is 0 [0-23] integer
+        hours: 22, // Default is 0 [0-23] integer
         minutes: 0, // Default is 0 [0-59] integer
         seconds: 0, // Default is 0 [0-59] integer
         words: {
           //words displayed into the countdown
-          days: { singular: "Hari", plural: "Hari" },
-          hours: { singular: "Jam", plural: "Jam" },
-          minutes: { singular: "Menit", plural: "Menit" },
-          seconds: { singular: "Detik", plural: "Detik" },
+          days: { singular: "Day", plural: "Days" },
+          hours: { singular: "Hour", plural: "Hours" },
+          minutes: { singular: "Mintue", plural: "Mintues" },
+          seconds: { singular: "Second", plural: "" },
         },
         onEnd: function () {
           // your code
