--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           days: { singular: "Day", plural: "Days" },
           hours: { singular: "Hour", plural: "Hours" },
           minutes: { singular: "Mintue", plural: "Mintues" },
-          seconds: { singular: "Second", plural: "" },
+          seconds: { singular: "Second", plural: "Seconds" },
         },
         onEnd: function () {
           // your code
